# infobip-whatsapp-sdk

./: Cargo.toml  README.md  infobip.json
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs
src/api/: conversions.rs  events.rs  flows.rs  identity.rs  inbound.rs  interactive.rs  media.rs  messages.rs  mod.rs  payments.rs  registration.rs  sender.rs  templates.rs
src/models/: common.rs  conversions.rs  errors.rs  events.rs  flows.rs  identity.rs  inbound.rs  mod.rs  payments.rs  registration.rs  sender.rs  webhooks.rs
src/models/interactive/: buttons.rs  call_permission.rs  common.rs  flow.rs  list.rs  location_request.rs  media_carousel.rs  mod.rs  multi_product.rs  order_details.rs  order_status.rs  product.rs  url_button.rs  voice_button.rs
src/models/messages/: audio.rs  contact.rs  document.rs  image.rs  location.rs  mod.rs  sticker.rs  template.rs  text.rs  video.rs
src/models/templates/: v2.rs
tests/: e2e_interactive.rs  e2e_management.rs  e2e_messages.rs
